--- a/paper.tex
+++ b/paper.tex
@@ -150,7 +150,7 @@ The first hardware interface barrier: Multiple incompatible interfaces are used 
 \yaq{} provides a unified TCP/IP interface to all hardware peripherals based on the well-described Avro RPC protocol.
 The trait system was introduced in pursuit of our primary goal of easing the client development process.
 Clients can trust that protocols that implement a given trait will behave in similar ways.
-The standardized \yaq{} interface hides all interface complexity away from researchers and client-side scientific code.
+The standardized \yaq{} interface presents the same set of interactions for client-side scientific code, simplifying the experience of using hardware.
 
 The second hardware interface barrier: Certain specialty hardware have inconvenient interface requirements.
 Since \yaq{} enables multiple machines, any hardware requirements can be addressed by putting a machine for that specific hardware on the network.
