--- a/paper.tex
+++ b/paper.tex
@@ -63,10 +63,10 @@ This can involve utilization of many interfaces: NI DAQmx\cite{nidaqmx}, SCPI\ci
 The process of integrating these is an important but time-consuming step of modern instrument and systems development.
 Weeks can be spent just integrating one new component into an existing project.
 In small academic labs, these software interfaces are typically created by student researchers without software development experience.
-Student researchers rarely focus on software reusability, and a lack of maitenence and documentation can make such software more difficult to use as time goes on.
+Student researchers rarely focus on software reusability, and a lack of maintenance and documentation can make such software more difficult to use over time.
 Scientists may struggle to rapidly innovate on their experimental design when each hardware addition requires major software development.
 
-Some large user-facilities have addressed interface complexity via the adoption of unified standards, such as EPICS \cite{DalesioLR1991a} or TANGO \cite{AGotz1999TANGOA}.
+Some large user-facilities have addressed interface complexity via the adoption of unified standards, such as EPICS \cite{DalesioLR1991a} and/or TANGO \cite{AGotz1999TANGOA}.
 The unified standards define a network interface for any hardware component.
 Orchestration software can target these unified standards for reading and writing hardware state.
 Small background services are written to translate the myriad component interfaces into the standard EPICS IOCs and TANGO Devices.
@@ -80,7 +80,7 @@ Most small custom research instrumentation continues to rely on monolithic softw
 These monolithic applications tend to be inflexible and difficult to develop.
 %To our knowledge, there are no existing open source projects that attempt to define a unified standard for hardware control of small scale experiments.
 
-We have created a novel network-based standard for scientific instrumentation, called \yaq{}.  This standard borrows the most important ideas from
+In order to address these issues, we have created a novel network-based standard for scientific instrumentation, called \yaq{}.  This standard borrows the most important ideas from
  established projects used by large user facilities while retaining simplicity appropriate for small research labs.
 We have built this standard to be self-describing, portable, and reusable wherever possible.
 Our primary goal has been to make an interface which simplifies orchestration software development as much as possible.
@@ -93,27 +93,27 @@ Finally, we discuss the heavy software maintenance burden that many instrument d
 In each case, we will highlight how the \yaq{} project is designed to alleviate that challenge.
 Several case studies provide a view into the flexible ways that \yaq{} can be applied to perform different scientific experiments.
 This paper provides an overview of the concepts and motivations behind \yaq{}.
-Refer to the \yaq{} website for a formal specification of the \yaq{} standard.\cite{yaq_fyi}
+The reader may also refer to the \yaq{} website for a formal specification of the \yaq{} standard.\cite{yaq_fyi}
 
 \section{Hardware Interface Challenges}
 
 In this section we describe the architecture of the \yaq{} framework in light of three major barriers that we have encountered in scientific instrumentation development.
-First barrier: Multiple interfaces are used to communicate with each component of the system.
+\textit{First barrier: Multiple interfaces are used to communicate with each component of the system.}
 A fully automated system must be able to use all of these interfaces, a daunting task for scientists who do not specialize in software development.
-Second barrier: Coding interfaces adds to a maintenance overhead seldom manageable by researchers.   Updates to the hardware and operating systems often
+\textit{Second barrier: Coding interfaces adds to a maintenance overhead seldom manageable by researchers.}   Updates to the hardware and operating systems often
 require maintenance updates to interfacing code that is not maintainable as researchers are not usually delegated to be strictly software maintainers.
-Third barrier: Certain specialty hardware have inconvenient interface requirements.
+\texit{Third barrier: Certain specialty hardware have inconvenient interface requirements.}
 A camera will only work with an obsolete interface card and drivers for Windows XP.
 A data acquisition manufacturer provides an Application Programmer Interface (API) that only works in Python 3.7.
 A graduate student wishes to drive several stepper motors using a Raspberry Pi.
-Fourth barrier: Some hardware interfaces are blocking.
+\texit{Fourth barrier: Some hardware interfaces are blocking.}
 A graphical user interface stalls while waiting for a camera to collect data.
 Custom orchestration software needs to be closed before the manufacturers configuration software can be used.
 A graduate student finds themself needing to master advanced concepts in concurrency in order to orchestrate many motors performantly.
 
 \begin{figure}
-	\includegraphics[width=\columnwidth]{figures/network}
-\caption{\label{fig:network} Networking diagram}
+	\includegraphics[width=\columnwidth]{figures/network2}
+\caption{\label{fig:network2} Networking diagram}
 \end{figure}
 
 Figure \ref{fig:network} diagrams the \yaq{} architecture.
@@ -124,12 +124,12 @@ At the top, a single computer is connected to four hardware peripherals through 
 That same computer is running four separate programs, one for each peripheral.
 These small, targeted, programs are managed by the operating system and run in the background.
 It is conventional to call such programs ``daemons''\cite{Raymond_1996}.
-The middle computer is connected two two additional peripherals, and runs daemons for each.
+The middle computer is connected to two additional peripherals, and runs daemons for each.
 Besides communicating with the hardware peripheral, each daemon can communicate with other programs, ``clients'',  through the network.
 The four client programs shown in Figure \ref{fig:network} can each communicate with all six hardware peripherals shown.
 As an example, a client running on the bottom computer could communicate with the RS232 peripheral shown in green via the following path: client $\leftrightarrow$ network switch $\leftrightarrow$ top computer $\leftrightarrow$ daemon $\leftrightarrow$ hardware peripheral.
-This powerful architecture can be used on a single computer or used across many networked computers, including fully remote operator interfaces.
-This client-server architecture offers similar network capabilities to EPICS and TANGO.
+This architecture can be used on a single computer or used across many networked computers, including fully remote operator interfaces.
+This client-server arrangement offers similar network capabilities to EPICS and TANGO.
 As we will show, usage of standards and the creation of tooling makes this architecture accessible to instrument builders outside of large facilities.
 
 In \yaq{}, communication between daemons and clients is performed over TCP/IP using Apache Avro RPC \cite{AvroSpecification}.
@@ -140,7 +140,7 @@ A sensor might implement a message called ``\texttt{get\_measured}'' which takes
 A motor would implement a pair of messages for setting and reading back the motor position: ``\texttt{set\_position(float position)} $\rightarrow$ \texttt{null} '' and ``\texttt{get\_position()} $\rightarrow$ \texttt{float}''.
 These self describing messages make up the lowest level functionality of the \yaq{} interface.
 Each individual communication between client and daemon involves one message being requested by the client and the response returned from the daemon.
-Each daemon supports a collection of messages for its unique functionality, called the ``protocol''.
+Each daemon supports a collection of messages for its own unique functionality, called the ``protocol''.
 
 \yaq{} introduces a concept called ``Traits'' which are collections of related messages that are shared among multiple protocols.
 Motors implement the ``has-position'' trait, which defines ``\texttt{set\_position}'', ``\texttt{get\_position}'', and ``\texttt{get\_units}''.
@@ -148,33 +148,33 @@ Sensors would implement the ``is-sensor'' trait which defines ``\texttt{get\_mea
 Protocols which implement a trait must support all of the messages from the trait.
 Importantly, specific protocols can also implement arbitrary additional messages that are not defined by any trait.
 
-The first hardware interface barrier: Multiple incompatible interfaces are used to communicate with each component of the system.
+\textit{The first hardware interface barrier: Multiple incompatible interfaces are used to communicate with each component of the system.}
 \yaq{} provides a unified TCP/IP interface to all hardware peripherals based on the well-described Avro RPC protocol.
 The trait system was introduced in pursuit of our primary goal of easing the client development process.
 Clients can trust that protocols that implement a given trait will behave in similar ways.
 The standardized \yaq{} interface presents the same set of interactions for client-side scientific code, simplifying the experience of using hardware.
 
-The second hardware interface barrier:  Coding interfaces adds to a maintenance overhead seldom manageable by researchers.  Here, we implement an approach useful for
+\textit{The second hardware interface barrier:  Coding interfaces add to a maintenance overhead seldom manageable by researchers.}  Here, we implement an approach useful for
 systems integration in the sciences which we call a Minimal Programming Interface (MPI).   The MPI is essentially a reduced set of functions found in the hardware API.   The MPI 
  is defined as the minimal set of API functions for a given hardware component concluded by the researchers as necessary for the fuller system development. 
  The value of this MPI is that it can be formed by wrapping and/or converting the API from its native language into a language known to be transparent to researchers, such as the programming
  language Python.  The \yaq{} traits feature acts as a tool in exposing the MPI from the base APIs often supplied by the hardware manufacturer, as the traits
  automatically define the primary set of key functions, and any additionally required functions are added by the researcher on top of the primary set.
 
-The third hardware interface barrier: Certain specialty hardware have inconvenient interface requirements.
+\textit{The third hardware interface barrier: Certain specialty hardware have inconvenient interface requirements.}
 Since \yaq{} enables multiple machines, any hardware requirements can be addressed by putting a machine for that specific hardware on the network.
 For example, the Windows XP computer which has the obsolete interface card and drivers can be placed into a private network with only \yaq{} interface communication.
 Because each \yaq{} daemon is running in its own process, the software environment can be tailored to its needs.
 A client running up to date Python 3.10 communicates seamlessly with a daemon running Python 3.7.
 
-The fourth hardware interface barrier: Some hardware interfaces are blocking.
+\textit{The fourth hardware interface barrier: Some hardware interfaces are blocking.}
 Monolithic orchestration software often necessitates separate threads for each component hardware interface, a fragile pattern in which small mistakes become both critical and elusive errors.
 In \yaq{}, each daemon is only responsible for a single hardware interface.
 %Each \yaq{} daemon runs as a separate process (possibly not even on the same machine) and thus many of the hard concurrency problems with communicating with hardware are mitigated.
 It is expected that each message call over the \yaq{} interface will return rapidly, ensuring that client applications are not blocked for extended periods of time.
 This principle applies even when the message starts an action that might take several seconds to complete, such as homing a motor or initiating a measurement for a sensor.
 In these instances, the initial message simply starts the action and returns, with a separate message provided to retrieve results when they exist.
-In order to know how long to wait, the ``is-daemon`` trait provides a message called ``is\_busy'' which should return "true" while the long running action is not complete, and "false" once it is finished.
+In order to know how long to wait, the ``is-daemon`` trait provides a message called ``is\_busy'' which should return \texttt{True} while the long running action is not complete, and \textt{False} once it is finished.
 Additionally, multiple clients can communicate with the same daemon simultaneously.
 A complex instrument may involve multiple operators watching sensor data in real time, while one program is orchestrating the hardware and recording the data.
 
@@ -186,7 +186,7 @@ A laser lab needs to spend weeks on software development when introducing a sing
 Researchers are disappointed to realize that they are forced to start from scratch when developing software for a similar instrument built with trivially different hardware.
 
 In our view, software inflexibility is a natural consequence of the typical software development practices used by custom instrument builders.
-Instrumental software is often built as one monolithic program that does everything from providing a graphical interface, through hardware interfacing, and writing data files.
+Instrumental software is often built as one monolithic program that does everything from providing a graphical interface, to hardware interfacing, and to writing data files.
 Such software is typically impossible to debug without access to real hardware, often requiring all of the hardware to be available to simply start the program.
 As such, instrumentation software development time is in conflict with valuable data acquisition time.
 The hardware interfaces that these programs implement are typically made quickly and without regard to standardization with similar hardware.
@@ -195,7 +195,7 @@ The orchestration routines are intimately tied to the particular hardware config
 Unique experiments will always need custom orchestration and user experience.
 We believe that novel instrumentation development naturally and necessarily includes the creation of targeted software.
 Developing experimental software is an iterative process tied to the scientific goals of the instrument.
-Often experimentalists must apply their specialty scientific knowledge to develop this software.\cite{SegalJudith2005a}
+Often experimentalists must apply their specialized scientific knowledge to develop this software.\cite{SegalJudith2005a}
 \yaq{} is architected to encourage better software development practices when creating such programs.
 In a \yaq{} context, orchestration code and graphical control interfaces are implemented as clients.
 These clients are automatically simpler because they only need to implement the \yaq{} standard and do not need to include the vast array of hardware-specific communication interfaces.
@@ -216,7 +216,7 @@ Each client object provides Python methods for each Avro message specified by th
 In the middle, the same three hardware peripherals are represented in an interactive, graphical form.
 \texttt{yaqc-qtpy}\cite{yaqc-qtpy} is a graphical application which builds interactive controls based on traits for any conceivable \yaq{} protocol.
 The self describing \yaq{} interface is used to provide graphical elements for the most commonly used messages.
-This is an invaluable tool which provides a ``free'' graphical user interface (GUI) to any daemon.
+This is an invaluable tool as it provides a ``free'' graphical user interface (GUI) to any daemon.
 
 At the top, we show several features associated with the integration between \yaq{} and the Bluesky project\cite{AllanDanielB2019a}.
 Bluesky provides a powerful orchestration layer for conducting and recording data for a wide variety of experimental procedures.
@@ -228,7 +228,8 @@ All three types of clients represented in Figure \ref{fig:foundation} have been 
 All types of clients can be used simultaneously to interact with the same instrument in different modes.
 Client sophistication can be introduced naturally, as novel experiments are tested and refined.
 Different clients can specialize for different requirements of a custom instrument
-For example, \texttt{yaqc-qtpy} can provide a quick interface for setting and viewing hardware positions while Bluesky can focus on experimental data acquisition.
+For example, \texttt{yaqc-qtpy} can provide a quick interface for setting and viewing hardware positions while Bluesky can focus on the actual data acquisition itself
+and the necessary planning on how the acquisition should be performed.
 
 The Landis Group at UW-Madison is currently working on a new type of flow reactor: the Wisconsin Quench Kinetics Reactor (WiQK).
 This reactor incorporates several computer-controlled valves and syringe pumps as well as various sensors.
@@ -246,7 +247,7 @@ Now, using \yaq{}, the Wright Group has been able to move to Bluesky rather than
 The Wright Group uses simulated hardware to enable client development away from the active laboratory computers.
 Remote client development on viritual hardware has allowed client design to proceed without delaying ongling experiments.
 Clients developed by the Wright Group have proved flexible enough to be used on four laser systems, each with different complements of hardware.
-Moving forward, the Wright Group will spend less energy developing control software and more energy developing creative spectroscopy experiments.
+We expect that the Wright Group will spend less energy developing control software and more energy developing creative spectroscopy experiments.
 
 \section{Incorporating New Hardware}
 
@@ -283,8 +284,8 @@ Even the most complicated daemons are implemented in about 300 lines.
 Implementing \yaq{} daemons using Python is enabled through our own tooling mentioned above and the large and growing ecosystem of hardware interface tooling libraries that Python now provides\cite{}.
 In our experience, the process of creating a new daemon involves about a day of work after communication with the hardware using Python is well understood.
 There are currently 70 daemons in the yaq project supporting at least 50 kinds of hardware, noting that some daemons support the same hardware and others are software only.
-Because \yaq{} is standards based, anyone can design and publish new daemons extending our hardware support.
-A living list of all daemons and supported hardware can be found on the \yaq{} website.\cite{}
+Because \yaq{} is standards-based, anyone can design and publish new daemons extending our hardware support.  The daemons are constructed under MPI methodologies and are more freely
+maintainable and adaptable than the original APIs.  A living list of all daemons and supported hardware can be found on the \yaq{} website.\cite{} 
 
 The Stahl Group at UW-Madison created a custom reactor which monitors gasses being produced or consumed in the reaction head-space.  \cite{SalazarChaseA2021a}
 This reactor incorporates a collection of sensitive pressure transducers and a single heating process value under computer control.
@@ -292,7 +293,7 @@ This reactor incorporates a collection of sensitive pressure transducers and a s
 Recently, experimentalists have been attempting reactions involving smaller, slower, pressure changes.
 A fundamental flaw in the initial analog to digital converter board was revealed by these attempts.
 As a result, a new digitizer has been purchased.
-This new digitizer will be incorporated into the existing reactor without modifying the existing graphical user interface and data recording program, minimizing downtime.
+This new digitizer will be incorporated into the existing reactor without modifying the existing graphical user interface and data recording program, and so downtime will be minimized.
 
 \section{Technical Debt}
 
@@ -303,7 +304,7 @@ A graduate student is forced to meticulously reverse engineer the LabVIEW codeba
 Software developers refer to the extra effort required to modify or fix large unmaintained codebases as ``technical debt''.\cite{}
 Technical debt grows especially fast in academic environments where graduate students are involved in projects for a limited time.
 
-The \yaq{} approach favors many small single-purpose applications above large monolithic ones.
+The \yaq{} approach attempts to minimize techincal debt by favoring many smaller, more easily adjustable single-purpose applications over larger, monolithic ones.
 For daemons, the purpose of each application is obvious and unambiguous.
 There is a strict, well defined interface which explicitly limits the kinds of interactions that are provided to the hardware, thus limiting opportunity for unintended consequences.
 The lack of hardware interface code makes \yaq{} clients much simpler and easier to describe and maintain.
