--- a/references.bib
+++ b/references.bib
@@ -7,7 +7,7 @@
 
 @article{AllanDanielB2019a,
  author = {Allan, Daniel and Caswell, Thomas and Campbell, Stuart and Rakitin, Maksim},
- title = {Bluesky′s Ahead: A Multi-Facility
+ title = {Bluesky's Ahead: A Multi-Facility
 Collaboration for an a la Carte Software Project for
 Data Acquisition and Management},
  journal = {Synchrotron Radiation News},
@@ -88,7 +88,7 @@ Analysis of Vibronic Mode Coupling in Molecules},
 
 @article{DalesioLR1991a,
  author = {Dalesio, L. R. and Kraimer, M. R. and Kozubal, A. J.},
- title = {EPICS Architecture},
+ title = {{EPICS} Architecture},
  journal = {ICALEPCS},
  year = {1991},
  volume = {91}
@@ -230,7 +230,7 @@ Electronic and Vibrational Excitations},
 }
 
 @misc{pymeasure,
- title = {PyMeasure scientific package},
+ title = {PyMeasure},
  year = {2022},
  url = {https://pymeasure.readthedocs.io/},
  note = {Accessed: 2022-10-02}
@@ -268,6 +268,18 @@ monitoring liquid-phase chemical reactions},
  version = {1999.0}
 }
 
+@article{SegalJudith2005a,
+ author = {Segal, Judith},
+ title = {When Software Engineers Met Research Scientists: A Case Study},
+ journal = {Empirical Software Engineering},
+ year = {2005},
+ month = {oct},
+ number = {4},
+ volume = {10},
+ pages = {517--536},
+ doi = {10.1007/s10664-005-3865-y}
+}
+
 @phdthesis{ThompsonBlaiseJonathan2018a,
  author = {Thompson, Blaise Jonathan},
  title = {Development of Frequency Domain Multidimensional
@@ -286,7 +298,7 @@ Photophysics},
 
 @misc{trspectrometer,
  author = {Tapping, Patrick},
- title = {TRSpectrometer},
+ title = {TRSpectrometer Documentation},
  year = {2021},
  url = {https://trspectrometer.readthedocs.io/en/latest/},
  note = {Accessed: 2022-10-02}
