rerender pdf with recent merges

--- a/references.bib
+++ b/references.bib
@@ -215,7 +215,7 @@ Electronic and Vibrational Excitations},
 }
 
 @manual{picam,
- title = {PICam™ 5.x Programmer’s Manual},
+ title = {PICam™ 5.x Programmer's Manual},
  year = {2021},
  issue = {12},
  organization = {Teledyne Princeton Instruments}
@@ -371,5 +371,3 @@ modular data acquisition},
  url = {https://pypi.org/project/yaqd-fakes},
  note = {Accessed: 2022-10-02}
 }
-
-
